Updated static class of list